# dubo-client

./: .env.template  .gitignore  CHANGELOG.md  DOC.md  LICENSE  README.md  conftest.py  justfile  pydoc-generator.sh  pydoc-markdown.yaml  pyproject.toml
.github/workflows/: deploy.yml
api-client-generator/: README.md  generate-client.sh  openapi-filters.yaml  openapi-fix.py
content/: dubo.ipynb
docs/notebooks/: Dubo API Demo.ipynb  dubo.ipynb  testing.ipynb
dubo/: __init__.py  __version__.py  ask_dubo.py  common.py  config.py  entities.py  query_utils.py
dubo/api_client/: .gitignore  README.md  __init__.py  generate-client.sh
dubo/api_client/models/: __init__.py  agent_action.py  agent_command.py  agent_command_command_args.py  agent_command_status.py  agent_payload.py  agent_payload_results.py  agent_synopsis.py  agent_task.py  agent_task_actions.py  agent_task_create.py  agent_task_feedback.py  agent_task_status.py  agent_thoughts.py  api_key.py  api_key_create.py  ask_dispatch_response.py  ask_dispatch_response_results_set_item.py  attenuated_ddl.py  autocomplete_request_body.py  autocomplete_response.py  body_ask_an_llm_v1_dubo_llm_post.py  body_create_documentation_api_v1_dubo_documentation_post.py  body_read_query_v1_dubo_query_get.py  body_sql_autocomplete_endpoint_v1_dubo_sql_autocomplete_post.py  body_update_document_api_v1_dubo_documentation_put.py  chart_execution.py  chart_execution_chart_spec.py  chart_execution_create_via_chart_spec.py  chart_execution_create_via_chart_spec_chart_spec.py  chart_execution_create_via_user_query.py  chart_execution_results_set_item.py  chart_type.py  chat_message.py  chat_message_create.py  chat_message_types.py  chat_role_types.py  chat_thread.py  chat_thread_create.py  chat_thread_event.py  (+79 more)
repl/: jupyter-lite.json
test/: test_ask_dubo.py
test/fixtures/docs/: updated_doc.txt
test/fixtures/vcr_cassettes/: test_ask.yaml  test_ask_dubo.yaml  test_ask_multi.yaml  test_autocomplete_sql.yaml  test_chart.yaml  test_create_doc.yaml  test_create_doc_invalid_file.yaml  test_delete_doc.yaml  test_get_all_docs.yaml  test_get_doc.yaml  test_get_doc_not_found.yaml  test_query.yaml  test_query_filter_documentation.yaml  test_query_just_sql.yaml  test_query_just_tables.yaml  test_update_doc.yaml
utils/flat_file_unification/: file_list.txt  main.py  requirements.txt  utils.py
utils/flat_file_unification/data/: hospital_price_transparency_010034_Community_Hospital_Machine_Readable_Standard_Charges_12_2020.csv  hospital_price_transparency_010040_631102774_Gadsden_standardcharges.csv  (+5 more)
(+12 files in other folders)
