[tool.poetry]
name = "dubo"
version = "0.2.7"
description = "Analytics made simple"
authors = ["Andrew Duberstein <ajduberstein@gmail.com>", "Andrew Duberstein <duber@mercator.tech>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.0"
altair = "^5.0.1"
pydeck = "^0.8.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
pylint = "^2.15.9"
jupyterlite = {version = "^0.1.0b17", allow-prereleases = true}
jupyterlab-server = "^2.18.0"
flake8 = {version = "^3.8.0", extras = ["toml"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[flake8]
max-line-length = 88